2007-12-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-tabmenu.el (w3m-tab-menubar-force-update): New function.
	(top): Register `w3m-tab-menubar-force-update' to
	`w3m-display-functions'.

2007-12-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-lynx-like-map): Bind `w3m-move-unseen-buffer'.
	(w3m-info-like-map): Ditto.
	(w3m-buffer-unseen): New buffer local variable.
	(w3m-set-buffer-unseen): New function.
	(w3m-set-buffer-seen): Ditto.
	(w3m-move-unseen-buffer): Ditto.
	(w3m-remove-local-hook): Ditto.
	(w3m-goto-url): Set buffer to unseen.
	(w3m-select-buffer-generate-contents): Support `unseen'.

	* w3m-util.el (top): Add the variable definition of `w3m-buffer-unseen'
	to avoid byte-compile warnings.
	(w3m-unseen-buffer-p): New inline macro.

	* w3m-tabmenu.el (w3m-tab-menubar-make-items-1): Support `unseen'.

	* w3m-ems.el (w3m-remove-local-hook): New function.
	(w3m-tab-unselected-unseen): New face.
	(w3m-tab-line): Support `unseen'.

2007-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mode): Set show-trailing-whitespace to nil.

2007-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-default-background): New user option.
	(w3m-favicon-set-image): Don't set background color of favicon here.
	(w3m-favicon-convert): Set the background color of favicon according to
	w3m-favicon-default-background.

	* w3m-ems.el (w3m-tab-line): Don't set the background color of favicon
	here.

	* w3m-image.el (w3m-imagick-identify-program): New user option.

2007-12-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-kill-stray-processes): Do not kill
	process when the buffer associated to it is alive.
	(w3m-process-sentinel): Do not call a handler when its parent
	buffer have been killed.

2007-12-15  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-submit): Remove queey part from the from's
	action url when using get method.

2007-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>
